...
            android:layout_alignParentTop="true"
            android:src="@drawable/vitality_age_disabled_large"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/vitality_age_title"
            style="@style/MaterialDarkSubhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/myhealth_title_topmargin"
            android:text="@string/my_health.vitality_age_screen_title_613" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/vitality_age_title">

            <TextView
                android:id="@+id/vitality_age_value"
                style="@style/VitalityAgeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginBottom="@dimen/myhealthcard_vitalityage_margin"
                android:layout_marginTop="@dimen/myhealthcard_vitalityage_margin"
...
                android:layout_width="@dimen/vitality_age_status_icon"
                android:layout_height="@dimen/vitality_age_status_icon"
                android:layout_gravity="left"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vitality_age_summary"
                style="@style/VitalityAgeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/vitality_age_status_icon_margin"
                android:gravity="top"
...
