...
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.vitalityactive.va.myhealth.onboarding.MyHealthOnboardingActivity"
    android:id="@+id/my_health_onboarding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

...
                android:text="@string/my_health.onboarding_section3_description_635" />
        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/my_health_onboarding_button"
        style="@style/MyHealthOnboardingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/my_health_onboarding_button_margin_bottom"
...
