...
        <item
            android:id="@+id/navigation_item_points_monitor"
            android:icon="@drawable/navdrawer_points_selector"
            android:title="@string/menu_points_button_6"
            app:actionLayout="@layout/menu_badge" />
        <item
            android:id="@+id/navigation_item_my_health"
            android:icon="@drawable/navdrawer_my_health_selector"
            android:title="@string/menu_myhealth_button_7"
            app:actionLayout="@layout/menu_badge" />
        <item
            android:id="@+id/navigation_item_profile"
            android:icon="@drawable/navdrawer_profile_selector"
...
