<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/feedback_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myhealth_tips_feeback_content_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/myhealth_tips_feeback_content_vertical_margin"
        android:background="@android:color/background_light">

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_item1"
            style="@style/MaterialLightBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_item2"
            style="@style/MaterialLightSubheadH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myhealth_vitalityage_profile_item1"
            android:layout_marginBottom="@dimen/myhealth_vitalityage_profile_item2_bottom_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_feedback_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myhealth_vitalityage_profile_item2"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/myhealth_profile_item3"
            android:textSize="14sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <TextView
        android:id="@+id/feedback_content_view_placeholder"
        style="@style/MaterialLightSubhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="21dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/feedback_tip_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/myhealth_vitalityage_profile_card_background"
        android:paddingBottom="@dimen/myhealth_profile_card_padding"
        android:paddingLeft="@dimen/myhealth_profile_card_padding"
        android:paddingTop="@dimen/myhealth_profile_card_padding">

        <ImageView
            android:id="@+id/myhealth_inner_icon"
            android:layout_width="@dimen/myhealth_profile_small_icon_size"
            android:layout_height="@dimen/myhealth_profile_small_icon_size"
            android:layout_alignParentTop="true"
            android:src="@drawable/learn_more_15"
            android:tint="@color/myhealth_tips_icon_tint" />

        <TextView
            android:id="@+id/myhealth_vitalityage_whattodo_title"
            style="@style/MaterialLightBody2Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/myhealth_inner_icon" />

        <TextView
            android:id="@+id/myhealth_vitalityage_whattodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myhealth_vitalityage_whattodo_title"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/myhealth_inner_icon"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/myhealth_tips_what_to_do"
            android:textSize="12sp"
            android:textStyle="normal" />
    </RelativeLayout>


</LinearLayout>