...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vitalityactive.va.myhealth.moretips.MyHealthMoreTipsActivity"
    android:id="@+id/activity_more_tips">


    <include layout="@layout/toolbar" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:dividerHeight="16dp"
        android:background="@android:color/white"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
...
