<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/root_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.vitalityactive.va.myhealth.vitalityageprofile.MyHealthVitalityAgeProfileActivity"
            android:id="@+id/vitality_age">

            <include layout="@layout/toolbar" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:dividerHeight="@dimen/vitality_age_divider"
                android:background="@color/active_rewards_divider_background"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:scrollbars="vertical"/>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>