package com.vitalityactive.va.myhealth;


import android.content.Intent;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.espresso.matcher.ViewMatchers;

import com.vitalityactive.va.R;
import com.vitalityactive.va.RepositoryTestBase;
import com.vitalityactive.va.cucumber.utils.MockNetworkHandler;
import com.vitalityactive.va.cucumber.utils.TestHarness;
import com.vitalityactive.va.myhealth.dto.MyHealthRepositoryImpl;
import com.vitalityactive.va.myhealth.shared.VitalityAgeConstants;
import com.vitalityactive.va.myhealth.vitalityageprofile.MyHealthTipsMoreResultsActivity;
import com.vitalityactive.va.networking.model.HealthAttributeInformationResponse;
import com.vitalityactive.va.persistence.DataStore;
import com.vitalityactive.va.testutilities.annotations.UITestWithMockedNetwork;

import org.junit.Before;
import org.junit.Test;

import java.io.IOException;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static com.vitalityactive.va.cucumber.utils.TestHarness.shortDelay;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.notNullValue;

@UITestWithMockedNetwork
public class MyHealthTipsMoreResultsActivityTest extends BaseTests {

    @Before
    public void setUp() throws InstantiationException, IllegalAccessException, IOException {
        super.setUp();
        MockNetworkHandler.enqueueResponseFromFile(200, "myhealth/health_information_response.json");
    }

    @Test
    public void can_load_feedback_tips() throws Exception {
        loadVitalityAgeProfileScreen();
        shortDelay(10000);
        onView(withId(R.id.vitality_age)).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.section_title), notNullValue()));
        onView(allOf(withId(R.id.myhealth_vitalityage_profile_item1), notNullValue()));
        onView(allOf(withId(R.id.myhealth_vitalityage_profile_item2), notNullValue()));
        onView(allOf(withId(R.id.myhealth_vitalityage_profile_feedback_name), notNullValue()));
        onView(allOf(withId(R.id.myhealth_vitalityage_whattodo_title), notNullValue()));
        onView(allOf(withId(R.id.myhealth_vitalityage_whattodo), notNullValue()));
        onView(ViewMatchers.withId(R.id.main_recyclerview)).perform(ViewActions.swipeUp());
        shortDelay(4000);
        onView(withIndex(withId(R.id.feedback_content_view), 1)).perform(click());
        shortDelay(5000);
        onView(withId(R.id.attribute_details_activity)).check(matches(isDisplayed()));
    }


    @Test
    public void should_load_more_tips() throws Exception {
        persistHealthAttributes("myhealth/health_information_response.json");
        Intent intent = new Intent();
        intent.putExtra(MyHealthTipsMoreResultsActivity.SECTION_TYPE_KEY, VitalityAgeConstants.V_AGE_TYPE_KEY_RESULT_BAD.intValue());
        TestHarness.launchActivity(MyHealthTipsMoreResultsActivity.class, intent);
        shortDelay(5000);
        onView(withId(R.id.activity_more_tips)).check(matches(isDisplayed()));
    }

    @Test
    public void can_navigate_to_tip_details_from_topview() throws Exception {
        persistHealthAttributes("myhealth/health_information_response.json");
        Intent intent = new Intent();
        intent.putExtra(MyHealthTipsMoreResultsActivity.SECTION_TYPE_KEY, VitalityAgeConstants.V_AGE_TYPE_KEY_RESULT_BAD.intValue());
        TestHarness.launchActivity(MyHealthTipsMoreResultsActivity.class, intent);
        shortDelay(5000);
        onView(withId(R.id.activity_more_tips)).check(matches(isDisplayed()));
        onView(withId(R.id.main_recyclerview)).perform(RecyclerViewActions.actionOnItemAtPosition(0, scrollTo()));
        onView(withIndex(withId(R.id.myhealth_vitalityage_profile_item1), 0)).perform(click());
        shortDelay(10000);
    }

    @Test
    public void can_navigate_to_tip_details_from_summary() throws Exception {
        persistHealthAttributes("myhealth/health_information_response.json");
        Intent intent = new Intent();
        intent.putExtra(MyHealthTipsMoreResultsActivity.SECTION_TYPE_KEY, VitalityAgeConstants.V_AGE_TYPE_KEY_RESULT_BAD.intValue());
        TestHarness.launchActivity(MyHealthTipsMoreResultsActivity.class, intent);
        shortDelay(5000);
        onView(withId(R.id.activity_more_tips)).check(matches(isDisplayed()));
        onView(withId(R.id.main_recyclerview)).perform(RecyclerViewActions.actionOnItemAtPosition(1, scrollTo()));
        onView(withIndex(withId(R.id.myhealth_vitalityage_profile_item1), 0)).perform(click());
        shortDelay(5000);
        onView(withId(R.id.attribute_details_activity)).check(matches(isDisplayed()));
    }

    private void persistHealthAttributes(String file) throws Exception {
        DataStore dataStore = TestHarness.setup().getDefaultDataStore();
        HealthAttributeInformationResponse response = RepositoryTestBase.getResponse(HealthAttributeInformationResponse.class, file);
        new MyHealthRepositoryImpl(dataStore).persistHealthAttributeTipResponse(response);
    }
}
